src-ken&y/objects/Operation_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Backflush_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backflush Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fixed_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Consumed__c</fullName>
        <label>Hours Consumed</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>IF(
   Actual_End_Date__c != null,
   1,
   IF(
      OR(
         NULLVALUE(Standard_Hours__c,0) = 0,
         NULLVALUE(Hours_Consumed__c,0) = 0
      ),
      0,
      IF(
         Fixed_Hours__c,
         Hours_Consumed__c / Standard_Hours__c,
         Hours_Consumed__c / (Standard_Hours__c * Work_Order__r.Order_Quantity__c)
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quantity_Available__c</fullName>
        <label>Quantity to Complete</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Completed__c</fullName>
        <label>Quantity Completed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Scrapped__c</fullName>
        <label>Quantity Scrapped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_Quantity__c</fullName>
        <label>Resource Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing</label>
        <referenceTo>Routing__c</referenceTo>
        <relationshipLabel>Operation Trackings</relationshipLabel>
        <relationshipName>Operation_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_List__c</fullName>
        <label>Serial List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Hours__c</fullName>
        <label>Standard Hours</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <label>Unique</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Work_Center_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Center Resource</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Work center resource&apos;s work center must be the same as work center</errorMessage>
            <filterItems>
                <field>Work_Center_Resource__c.Work_Center__c</field>
                <operation>equals</operation>
                <valueField>$Source.Work_Center__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Center_Resource__c</referenceTo>
        <relationshipLabel>Operation Trackings</relationshipLabel>
        <relationshipName>Operation_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Center</label>
        <referenceTo>Work_Center__c</referenceTo>
        <relationshipLabel>Operation Trackings</relationshipLabel>
        <relationshipName>Operation_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Operation Trackings</relationshipLabel>
        <relationshipName>Operation_Trackings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Operation Tracking</label>
    <nameField>
        <label>Operation Tracking</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operation Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Actual_start_end_date</fullName>
        <active>true</active>
        <description>Actual end date must be after actual start date</description>
        <errorConditionFormula>OR(AND(Actual_End_Date__c != null,Actual_Start_Date__c == null),Actual_End_Date__c &lt; Actual_Start_Date__c)</errorConditionFormula>
        <errorMessage>Actual end date must be after actual start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fixed_backflush</fullName>
        <active>true</active>
        <description>Fixed hours is only allowed for backflushed resources</description>
        <errorConditionFormula>AND(NOT(Backflush_Resource__c),Fixed_Hours__c)</errorConditionFormula>
        <errorMessage>Fixed hours is only allowed for backflushed resources</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_negative_hours</fullName>
        <active>true</active>
        <description>Hours consumed cannot be negative</description>
        <errorConditionFormula>Hours_Consumed__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Hours_Consumed__c</errorDisplayField>
        <errorMessage>Hours consumed cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_negative_resource_quantity</fullName>
        <active>true</active>
        <description>Resource quantity cannot be negative</description>
        <errorConditionFormula>Resource_Quantity__c &lt; 0</errorConditionFormula>
        <errorMessage>Resource quantity cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_negative_standard_hours</fullName>
        <active>true</active>
        <description>Standard hours cannot be negative</description>
        <errorConditionFormula>Standard_Hours__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Standard_Hours__c</errorDisplayField>
        <errorMessage>Standard hours cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_populated_if_end_date</fullName>
        <active>true</active>
        <description>Start date must be populated if end date is populated</description>
        <errorConditionFormula>AND(Start_Date__c == null,End_Date__c != null)</errorConditionFormula>
        <errorMessage>Start date must be populated if end date is populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_end_date</fullName>
        <active>true</active>
        <description>End date must be after start date</description>
        <errorConditionFormula>OR(AND(End_Date__c != null,Start_Date__c == null),End_Date__c &lt; Start_Date__c)</errorConditionFormula>
        <errorMessage>End date must be after start date</errorMessage>
    </validationRules>
</CustomObject>